<resources>
    <string name="app_name">UsersApp</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet</string>
    <string name="application_made_by">Application made by Beata Podgajski</string>
    <string name="university">Algebra</string>
    <string name="year">2023.</string>

    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="really">Really exit app?</string>
    <string name="cancle">Cancel</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="user_avatar">user-avatar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="algebra">Visoko učilište Algebra</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="socialSecurityNumber">Social insurance number</string>
    <string name="socialInsuranceNumber">Social insurance number</string>
    <string name="phoneNumber">Phone number</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="fName">First name</string>
    <string name="lName">Last name</string>
</resources>