<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_columnSpan="2"
            android:layout_margin="16dp"
            android:layout_marginBottom="0dp"
            tools:src="@drawable/crm"
            android:contentDescription="@string/user_avatar" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            tools:text="username" />
        <TextView
            android:id="@+id/tvDateOfBirth"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            tools:text="dd-MM-yyy" />

        <TextView/><TextView/>

        <!--    data attr    -->
        <TextView
            tools:text="@string/name"
            android:text="@string/name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>

        <TextView
            tools:text="@string/gender"
            android:text="@string/gender"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>
        <TextView
            android:id="@+id/tvGender"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>

        <TextView
            tools:text="@string/email"
            android:text="@string/email"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>
        <TextView
            android:id="@+id/tvEmail"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>

        <TextView
            tools:text="@string/phoneNumber"
            android:text="@string/phoneNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>
        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>

        <TextView
            tools:text="@string/socialInsuranceNumber"
            android:text="@string/socialInsuranceNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>
        <TextView
            android:id="@+id/tvSocialInsuranceNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginTop="8dp"
            android:layout_gravity="end">

            <Button
                android:text="@string/edit"
                android:id="@+id/bEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                />
        </LinearLayout>


    </GridLayout>



</ScrollView>